<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_profile2"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.271" />

    <android.support.v7.widget.CardView
        android:backgroundTint="#ffe6ff"
        android:elevation="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:id="@+id/tv_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Name"
                android:textStyle="bold"/>

            <TextView
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:paddingLeft="8dp"
                android:layout_toRightOf="@id/tv_Name"
                android:id="@+id/alc_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alc_Name" />


            <TextView
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:layout_below="@id/tv_Name"
                android:id="@+id/tv_Track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Track" />

            <TextView
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:paddingLeft="8dp"
                android:layout_below="@id/alc_Name"
                android:layout_toRightOf="@id/tv_Track"
                android:id="@+id/alc_Track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alc_Track" />


            <TextView
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:layout_below="@id/tv_Track"
                android:id="@+id/tv_Country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Country" />

            <TextView
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:paddingLeft="8dp"
                android:layout_below="@id/alc_Track"
                android:layout_toRightOf="@id/tv_Country"
                android:id="@+id/alc_Country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alc_Country" />

            <TextView
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:layout_below="@id/tv_Country"
                android:id="@+id/tv_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_Email" />

            <TextView
                android:paddingTop="4dp"
                android:textColor="@color/colorPrimary"
                android:paddingLeft="8dp"
                android:layout_below="@id/alc_Country"
                android:layout_toRightOf="@id/tv_Email"
                android:id="@+id/alc_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alc_Email" />

            <TextView
                android:textStyle="bold"
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:layout_below="@id/tv_Email"
                android:id="@+id/tv_PhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_PhoneNo" />

            <TextView
                android:paddingTop="4dp"
                android:textColor="#FF000000"
                android:paddingLeft="8dp"
                android:layout_below="@id/alc_Email"
                android:layout_toRightOf="@id/tv_PhoneNo"
                android:id="@+id/alc_PhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alc_PhoneNo" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>